@@ -1,4 +1,5 @@
 require "css/sac/parser"
+require "css/stylesheet"
 
 module CSS
   module SAC
